# chaosplus

./: README.md  convert_icon.py  pyproject.toml
src/: main.py
src/components/: __init__.py
src/localisations/: localisation.csv  translations.py
src/views/: __init__.py  error.py  home.py  mediainfo.py  videoplayer.py
