[project]
name = "chaosplus"
version = "0.1.0"
description = "An App for media.ccc.de"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Creative Media Group", email = "cmg.buissnes@web.de" }]
dependencies = [
    "flet==0.28.3",
    "mylocale",
    "flet-localisation",
    "git+https://github.com/Creative-Media-Group/flet-video.git",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "de.cmg"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Chaos+"

# company name to display in about app dialogs
company = "Creative Media Group"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Creative Media Group"

[tool.flet.app]
path = "src"

[tool.flet.android]
dependencies = ["pyjnius"]

[tool.flet.ios]
dependencies = ["pyobjus"]

[tool.uv]
dev-dependencies = ["flet[all]==0.28.3"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.28.3" }
