[project]
name = "chaosplus"
version = "0.1.0"
description = "An App for media.ccc.de"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Flet developer", email = "you@example.com" }]
dependencies = ["flet>=0.82.2", "mylocale", "flet-localisation", "flet-video"]

[dependency-groups]
dev = ["flet-cli>=0.82.2", "flet-desktop-light>=0.82.2", "flet-web>=0.82.2"]

[tool.flet]
org = "de.cmg"
product = "Chaos+"
company = "Creative Media Group"
copyright = "Copyright (C) 2023-2026 by Creative Media Group"

[tool.flet.app]
path = "src"

[tool.flet.android]
dependencies = ["pyjnius"]

[tool.flet.ios]
dependencies = ["pyobjus"]
